--- a/tests/evaluation/scripts/statemnts.yaml
+++ b/tests/evaluation/scripts/statemnts.yaml
@@ -39,41 +39,45 @@ tests:
     - ['h', 1]
   - statements:
     - ['i = 3d6', null]
-    - ['i =-> top', null]
+    - ['i => top', null]
     - ['i', [3]]
+  - statements:
+    - ['i = 3d6', null]
+    - ['i => top(2) -> bottom', null]
+    - ['i', [2]]
 
 - name: bags
   categories:
   - bags
   tests:
   - statements:
-    - ['a = {-}', null]
+    - ['a = {:}', null]
     - ['a', {}]
   - statements:
-    - ['b = {-}', null]
+    - ['b = {:}', null]
     - ['b.{1} = 2', null]
     - ['b', { 1: 2 }]
     - ['b.{1}', 2]
   - statements:
-    - ['c = {-}', null]
+    - ['c = {:}', null]
     - ["c.{'x'} = 3", null]
     - ['c', {'x': 3}]
     - ['c.x', 3]
   - statements:
-    - ['d = {-}', null]
+    - ['d = {:}', null]
     - ['d.x = 4', null]
     - ['d', {'x': 4}]
     - ["d.{'x'}", 4]
   - statements:
-    - ['e = {-}', null]
+    - ['e = {:}', null]
     - ["e.{'x'} = 1", null]
     - ['e.x += 4', null]
     - ['e', {'x': 5}]
     - ['e.x', 5]
     - ["e.{'x'}", 5]
   - statements:
-    - ['f = {-}', null]
-    - ['f.x = {-}', null]
+    - ['f = {:}', null]
+    - ['f.x = {:}', null]
     - ['f', {'x': {}}]
     - ['f.x.a = 2', null]
     - ['f', {'x': {'a': 2}}]
@@ -83,7 +87,7 @@ tests:
     - ["f.{'x'}", {'a': 4}]
     - ['f.x.a', 4]
   - statements:
-    - ['g = {-}', null]
+    - ['g = {:}', null]
     - ["y = 'x'", null]
     - ['g.x = 4', null]
     - ['g.y = 3', null]
