--- a/tests/evaluation/scripts/modifiers.yaml
+++ b/tests/evaluation/scripts/modifiers.yaml
@@ -25,18 +25,18 @@ tests:
   tests:
   - statements:
     - ['test1 <-: 1', null]
-    - ['2 -> test1', 2]
+    - ['2 -> test1', 1]
   - statements:
-    - ['test2 <-: ? = 3', null]
+    - ['test2 <-: [? = 3]', null]
     - ['4 -> test2', 3]
   - statements:
-    - ['test3 <-: ? += 1', null]
+    - ['test3 <-: [? += 1]', null]
     - ['2d6 -> test3', 4]
   - statements:
-    - ['test4 <- val1 : ? += val1', null]
+    - ['test4 <- val1 [? += val1]', null]
     - ['3 -> test4(2)', 5]
   - statements:
-    - ['test5 <- val1 : ? += val1', null]
+    - ['test5 <- val1 : [? += val1]', null]
     - ['3 -> test5(2)', 5]
     - ['3 -> test5(3)', 6]
     - ['4 -> test5(1d6) -> test5(2d6)', 10]
@@ -49,3 +49,19 @@ tests:
     #- ['test7 <-', null]
     #- [' -> test6', ]
     #- [' -> test7', ]
+
+- name: leave
+  categories:
+  - leave
+  tests:
+  - statements:
+    - ['a <- [leave]', null]
+    - ['2 -> a', 2]
+  - statements:
+    - ['b <-: [leave | ? = 1]', null]
+    - ['2 -> b', 2]
+  - statements:
+    - ['c <-: [if ? == 2 then [? = 1 | leave] ? = 4]', null]
+    - ['1 -> c', 4]
+    - ['2 -> c', 1]
+    - ['3 -> c', 4]
