--- a/tests/parsing/scripts/bags.yaml
+++ b/tests/parsing/scripts/bags.yaml
@@ -61,7 +61,9 @@ tests:
           left:
             _class: Reference
             value: 'd'
-          op: '+'
+          op:
+            _class: TwoSidedOperator
+            value: ADD
           right: 2
       - _class: Assignment
         target:
@@ -72,7 +74,9 @@ tests:
           left:
             _class: Reference
             value: 'd'
-          op: '+'
+          op:
+            _class: TwoSidedOperator
+            value: ADD
           right: 1
   - script: '{: a <-[] :}'
     result:
