--- a/tests/parsing/scripts/conditionals.yaml
+++ b/tests/parsing/scripts/conditionals.yaml
@@ -32,7 +32,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '=='
+      op:
+        _class: TwoSidedOperator
+        value: EQUALS
       right:
         _class: Reference
         value: a
@@ -40,7 +42,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '>='
+      op:
+        _class: TwoSidedOperator
+        value: GREATER_THAN_EQUALS
       right:
         _class: Reference
         value: a
@@ -48,7 +52,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '<='
+      op:
+        _class: TwoSidedOperator
+        value: LESS_THAN_EQUALS
       right:
         _class: Reference
         value: a
@@ -56,7 +62,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '!='
+      op:
+        _class: TwoSidedOperator
+        value: NOT_EQUALS
       right:
         _class: Reference
         value: a
@@ -64,7 +72,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '>'
+      op:
+        _class: TwoSidedOperator
+        value: GREATER_THAN
       right:
         _class: Reference
         value: a
@@ -72,7 +82,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '<'
+      op:
+        _class: TwoSidedOperator
+        value: LESS_THAN
       right:
         _class: Reference
         value: a
@@ -80,7 +92,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: 'has'
+      op:
+        _class: OneSidedOperator
+        value: HAS
       right:
         _class: Reference
         value: a
@@ -94,7 +108,9 @@ tests:
     result:
       _class: BinaryOp
       left: 1
-      op: '>'
+      op:
+        _class: TwoSidedOperator
+        value: GREATER_THAN
       right:
         _class: Reference
         value: a
@@ -105,7 +121,9 @@ tests:
         _class: DiceNode
         number_of_dice: 1
         sides: 6
-      op: 'has'
+      op:
+        _class: OneSidedOperator
+        value: HAS
       right: 2
   - script: '1d6 has 2 - b'
     result:
@@ -114,11 +132,15 @@ tests:
         _class: DiceNode
         number_of_dice: 1
         sides: 6
-      op: 'has'
+      op:
+        _class: OneSidedOperator
+        value: HAS
       right:
         _class: BinaryOp
         left: 2
-        op: '-'
+        op:
+          _class: TwoSidedOperator
+          value: SUBTRACT
         right:
           _class: Reference
           value: b
@@ -129,11 +151,15 @@ tests:
         _class: DiceNode
         number_of_dice: 1
         sides: 6
-      op: '<'
+      op:
+        _class: TwoSidedOperator
+        value: LESS_THAN
       right:
         _class: BinaryOp
         left: 2
-        op: '!='
+        op:
+          _class: TwoSidedOperator
+          value: NOT_EQUALS
         right:
           _class: Reference
           value: z
@@ -146,9 +172,13 @@ tests:
           _class: DiceNode
           number_of_dice: 1
           sides: 6
-        op: '<'
+        op:
+          _class: TwoSidedOperator
+          value: LESS_THAN
         right: 2
-      op: '!='
+      op:
+        _class: TwoSidedOperator
+        value: NOT_EQUALS
       right: 3
 
 - name: use_if
